infra/k8s-prod/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          # UMESTO OVOGA
          # image: eu.gcr.io/microticket/auth
          # DEFINISEM OVO
          image: radebajic/mt-auth
          # JER POMENUTI IMAGE CE BITI NA DOCKER HUB-U
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
