infra/k8s-prod/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # OVO JE VAZNO, VIDECES I ZASTO
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          # image: eu.gcr.io/microticket/payments
          image: radebajic/mt-payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  type: ClusterIP
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
