infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # DODAO SAM OVO
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
  # ----------------------------------------------
  # DOADAO SAM SECRET, KOJI CE SE GENERISATI DA
  # U NJEGA ISSUER STAVI CERTIFIVCATE
  tls:
    - hosts:
        # DODACU OVDE I OVAJ HOST
        - microticket.xyz
      secretName: micktick-tls
  # ----------------------------------------------
  rules:
    - host: www.microticket.xyz
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Exact
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/tickets/?(.*)
            pathType: Exact
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: Exact
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /api/payments/?(.*)
            pathType: Exact
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Exact
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    # OVDE SMO RANIJE ZADALI KOJI NAM HOST UPIRE U LOAD BALANCER-A
    service.beta.kubernetes.io/do-loadbalancer-hostname: "microticket.xyz"
    # A SADA CEMO DA ZADAMO KOJI JE ALLOWED PROTOCOL ZA LOAD BALANCER-A
    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
    #
  labels:
    helm.sh/chart: ingress-nginx-2.11.1
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.34.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
